crates/hydracache-db/tests/policy/fail_duplicate_sql.rs
use hydracache_db::query_cache_policy;

fn main() {
    let _policy = query_cache_policy!(
        key = "users",
        sql = "select * from users",
        sql = "select * from roles",
    );
}
